--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "core-js": "^3.15.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "jssha": "^3.2.0",
-    "nuxt": "^2.15.7"
+    "leaflet": "^1.7.1",
+    "leaflet.markercluster": "^1.5.3",
+    "nuxt": "^2.15.7",
+    "wicket": "^1.3.8"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
