--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
     "@nuxtjs/axios": "^5.13.6",
     "bootstrap": "^5.1.3",
     "core-js": "^3.15.1",
@@ -18,7 +20,8 @@
     "jssha": "^3.2.0",
     "leaflet": "^1.7.1",
     "leaflet.markercluster": "^1.5.3",
-    "nuxt": "^2.15.7",
+    "nuxt": "^2.15.3",
+    "vue": "^2.6.14",
     "wicket": "^1.3.8"
   },
   "devDependencies": {
